fix: incorrect calculation of dps equivalent